force-app/main/default/objects/Default_Loyalty_Levels__mdt/Default_Loyalty_Levels__mdt.object-meta.xml
<CustomObject>
    <description>Default for new loyalty Levels per Donation Type</description>
    <label>Default Loyalty Level</label>
    <pluralLabel>Default Loyalty Levels</pluralLabel>
</CustomObject>