force-app/main/default/objects/Default_Loyalty_Levels__mdt/fields/Donation_Payment__c.field-meta.xml
<CustomField>
    <fullName>Donation_Payment__c</fullName>
    <label>Donation Payment</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>