force-app/main/default/objects/Default_Loyalty_Levels__mdt/fields/Donation_Points__c.field-meta.xml
<CustomField>
    <fullName>Donation_Points__c</fullName>
    <label>Donation Points</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>