force-app/main/default/objects/Default_Loyalty_Levels__mdt/fields/Schedule_Rights__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Rights__c</fullName>
    <label>Schedule Rights</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
                <default>true</default>
                <label>Default</label>
            </value>
            <value>
                <fullName>Preferred</fullName>
            </value>
            <value>
                <fullName>Unlimited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>